refactored and improved code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
       href="/src/assets/logos/AeroLink.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=widgets"
+    />
     <title>Welcome to AeroLink</title>
+
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+      }
+    </style>
   </head>
   <body class="stars">
     <span class="stars__star"></span>
@@ -22,6 +32,7 @@
     <span class="stars__star"></span>
     <span class="stars__star"></span>
     <div id="root"></div>
+    <div id="popup"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
